apps/media/tautulli-nas/deployment-tautulli-nas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: tautulli-nas
  name: tautulli-nas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tautulli-nas
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: tautulli-nas
    spec:
      containers:
        - image: tautulli/tautulli:v2.18.2
          name: tautulli-nas
          resources: {}
          ports:
            - containerPort: 8181
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: tautulli-nas
      restartPolicy: Always
      volumes:
        - name: tautulli-nas
          persistentVolumeClaim:
            claimName: tautulli-nas
