apps/media/tautulli-nas/service-tautulli-nas.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tautulli-nas
  name: tautulli-nas
spec:
  ports:
    - port: 8181
      targetPort: 8181
  selector:
    app: tautulli-nas
