apps/media/tautulli-nas/ingress-tautulli-nas.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tautulli-nas
spec:
  ingressClassName: nginx
  rules:
  - host: tautulli-nas.almothana.xyz
    http:
      paths:
      - backend:
          service:
            name: tautulli-nas
            port:
              number: 8181
        path: /
        pathType: ImplementationSpecific
  tls:
    - hosts:
        - tautulli-nas.almothana.xyz
      secretName: almothana-xyz-tls
